<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Best Country Music Radio</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="admob_app_id">ca-app-pub-9589294252350306~6552931646</string>

    <!-- play store application link i.e more apps -->
    <string name="play_more_apps">https://play.google.com/store/apps/developer?id=Best+Country+Music+Songs</string>

    <string name="privacy_policy_url">http://radiomusicpro.com/Privacy_Policy.html</string>

    <!--Home Tabs Names-->
    <string name="tab_1">Home</string>
    <string name="tab_2">City</string>
    <string name="tab_3">Language</string>
    <string name="tab_4">All Radios</string>

    <!--if you want rtl change value of isRTL to true else false-->
    <string name="isRTL">false</string>

    <!--change below all labels if you want to change language-->
    <string name="splashscreen">Splash Screen</string>
    <string name="title_activity_main">MainActivity</string>

    <!-- menu  -->
    <string name="menu_about">About</string>
    <string name="menu_moreapp">More App</string>
    <string name="menu_rateapp">RateApp</string>
    <string name="menu_search">Search</string>

    <string name="mp_loading">Loading </string>
    <string name="nav_header">Nav Header</string>
    <string name="radio_list">Radio List</string>
    <string name="city">City</string>
    <string name="favourite">Favourite</string>
    <string name="facebook">Facebook</string>
    <string name="twittr">Twitter</string>
    <string name="rate_app">Rate App</string>
    <string name="share_app">Share App</string>
    <string name="more_app">More App</string>
    <string name="about_us">About Us</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="items_not_found">No Items Found</string>
    <string name="internet_not_connected">Internet not connected</string>
    <string name="loading">Loading..</string>
    <string name="city_details">City Details</string>
    <string name="all_city">All City</string>
    <string name="all_featured">All Featured</string>
    <string name="all_language">All Language</string>
    <string name="latest_radio">Latest Radio</string>
    <string name="stop">Stop</string>
    <string name="no_radio_selected">No Radio Selected</string>
    <string name="add_to_fav">Added to Favourite</string>
    <string name="remove_from_fav">Removed from Favourite</string>
    <string name="version">Version</string>
    <string name="author">Author</string>
    <string name="company">Company</string>
    <string name="email">Email</string>
    <string name="website">Website</string>
    <string name="contact">Contact</string>
    <string name="description">Description</string>
    <string name="no_fm">No FM</string>
    <string name="HZ">Hz</string>
    <string name="view">View</string>
    <string name="more">More</string>
    <string name="home">Home</string>
    <string name="language">Language</string>
    <string name="language_details">Language Details</string>
    <string name="sure_quit">Are You Sure You Want To Quit?</string>
    <string name="your_ad_consent">Your Ad Consent</string>
    <string name="show_personalized_ad">Show Personalized Ads</string>
    <string name="enable_push_noti">Enable Push Notification</string>
    <string name="settings">Settings</string>
    <string name="no_song">No Song</string>
    <string name="unknown_song">Unknown Song</string>
    <string name="about">About</string>
    <string name="themes">Themes</string>
    <string name="trending">Trending</string>
    <string name="listining_to">I am listening to</string>
    <string name="on_demand">On Demand</string>
    <string name="close">Close</string>
    <string name="radio">Radio</string>
    <string name="items">Items</string>
    <string name="featured">Featured</string>
    <string name="try_again">Try Again</string>
    <string name="welcomeback">Welcome</string>
    <string name="signin_to_continue">Sign In to continue</string>
    <string name="remember_me">Remember Me</string>
    <string name="registering">Registering..</string>
    <string name="forgot_password_message">Enter your valid email address below and we will send you email with instructions on how to change your password</string>
    <string name="send">Send</string>
    <string name="image">Image</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="skip">Skip</string>
    <string name="forgot_pass">Forgot Your Password?</string>
    <string name="dnt_have_acc">Dont have an account?</string>
    <string name="signup">SingUp</string>
    <string name="email_empty">Email cannot be empty</string>
    <string name="cannot_empty">Field cannot be empty</string>
    <string name="pass_end_space">Please do not add space at end</string>
    <string name="name">Name</string>
    <string name="cpassword">Confirm Password</string>
    <string name="enter_phone">Enter Phone</string>
    <string name="register">Register</string>
    <string name="already_acc">Already have an account?</string>
    <string name="phone">Phone</string>
    <string name="enter_name">Please Enter Name</string>
    <string name="enter_email">Please Enter Email</string>
    <string name="enter_password">Please Enter Password</string>
    <string name="enter_cpassword">Please Enter Confirm Password</string>
    <string name="pass_nomatch">Confirm Password not matched</string>
    <string name="not_log">Not Logged In</string>
    <string name="profile">Profile</string>
    <string name="edit">Edit</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="update">Update</string>
    <string name="min">min</string>
    <string name="logout">Logout</string>
    <string name="logout_success">Logout Successful</string>
    <string name="invalid_user">Invalid User</string>
    <string name="song_title">Song Title</string>
    <string name="song_desc">Song Description</string>
    <string name="add_thumb">+ Add Song Thumbnail</string>
    <string name="submit">Submit</string>
    <string name="upload_success">Upload Successful</string>
    <string name="ok">OK</string>
    <string name="select_image">Select Image</string>
    <string name="enter_song_title">Enter Song Title</string>
    <string name="enter_song_desc">Enter Song Description</string>
    <string name="suggestion">Suggestion</string>
    <string name="report">Report</string>
    <string name="report_sub">Your issue with this song will be checked</string>
    <string name="copyright">Copyright</string>
    <string name="improper">Improper</string>
    <string name="other">Other</string>
    <string name="write_issue">Write your issue</string>
    <string name="write_report_details">Write report details</string>
    <string name="exit">Exit</string>
    <string name="cancel">Cancel</string>
    <string name="set">Set</string>
    <string name="clear_cache">Clear Cache</string>
    <string name="clearing_cache">Clearing Cache..</string>
    <string name="cache_cleared">Cache Cleared</string>
    <string name="sleep_time">Sleep Time</string>

    <string name="server_error">Server Error</string>

    <string name="error_loading_radio">Error loading radio</string>
    <string name="error_server">Error connecting server</string>
    <string name="error_password_sort">This password is too short</string>
    <string name="error_invalid_email">Invalid Email</string>
    <string name="error_unauth_access">Unauthorized Access</string>
    <string name="error_unauth_api">Your App has Unauthorized access to APIs</string>
    <string name="error_connect_net_tryagain">Please connect to internet and try again</string>
    <string name="slider">Slider</string>
    <string name="player">Player</string>
    <string name="login_success">Login Successful</string>
    <string name="rate_this_app">Rate this app</string>
    <string name="rate_this_app_message">If you enjoy playing this app, would you mind taking a moment to rate it? It won\'t take more than a minute. Thanks for your support..!!</string>
    <string name="rate_it_now">Rate It Now</string>
    <string name="remind_me_later">Remind me later</string>
    <string name="no_radio_found">No Radios Found</string>

    <string name="usa">USA</string>
    <string name="germany">Germany</string>
    <string name="italy">Italy</string>
    <string name="australia">Australia</string>
    <string name="austria">Austria</string>
    <string name="sweden">Sweden</string>
    <string name="france">France</string>
    <string name="spain">Spain</string>
    <string name="canada">Canada</string>
    <string name="switzerland">Switzerland</string>
    <string name="colombia">Colombia</string>
    <string name="brazil">Brazil</string>
    <string name="haiti">Haiti</string>
    <string name="uk">United Kingdom</string>
    <string name="denmark">Denmark</string>
    <string name="netherlands">Netherlands</string>
    <string name="ireland">Ireland</string>
    <string name="indonesia">Indonesia</string>
    <string name="turkey">Turkey</string>
    <string name="kenya">Kenya</string>
    <string name="norway">Norway</string>
    <string name="mexico">Mexico</string>
    <string name="uruguay">Uruguay</string>
    <string name="russia">Russia</string>
    <string name="poland">Poland</string>
    <string name="singapore">Singapore</string>
    <string name="romania">Romania</string>
    <string name="all_trending">All Trending</string>
    <string name="all_latest">All Latest</string>
    <string name="all_radio">All Radio</string>
</resources>
