<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="15dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:text="@string/song_title"
            android:textColor="@color/black"
            android:textSize="14sp" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            app:cardBackgroundColor="@color/white"
            app:cardElevation="3dp">

            <EditText
                android:id="@+id/editText_sug_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:hint="@string/song_title"
                android:inputType="text"
                android:padding="10dp"
                android:textSize="16sp"/>

        </androidx.cardview.widget.CardView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="5dp"
            android:text="@string/song_desc"
            android:textColor="@color/black"
            android:textSize="14sp" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            app:cardBackgroundColor="@color/white"
            app:cardElevation="3dp">

            <EditText
                android:id="@+id/editText_sug_desc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:gravity="top"
                android:hint="@string/song_desc"
                android:inputType="textMultiLine"
                android:maxLines="5"
                android:minLines="5"
                android:padding="10dp"
                android:textSize="16sp" />

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            app:cardBackgroundColor="@color/white"
            app:cardElevation="3dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="10dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:textColor="@color/red"
                    android:text="@string/add_thumb"/>

                <com.makeramen.roundedimageview.RoundedImageView
                    android:id="@+id/imageView_sug"
                    android:layout_width="match_parent"
                    android:layout_height="120dp"
                    android:layout_margin="10dp"
                    android:scaleType="centerCrop"
                    app:riv_corner_radius="5dp"
                    android:src="@drawable/placeholder_upload"/>

            </LinearLayout>

        </androidx.cardview.widget.CardView>
        
        <Button
            android:id="@+id/button_sug"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/submit"
            android:layout_gravity="center"
            android:textColor="@color/white"
            android:layout_marginLeft="45dp"
            android:layout_marginRight="45dp"
            android:layout_marginTop="35dp"
            android:layout_marginBottom="65dp"/>

    </LinearLayout>

</ScrollView>